add product details

--- a/.env
+++ b/.env
@@ -13,3 +13,6 @@ VUE_APP_API_ADD_ITEM_TO_CART_URL= /shoppingCart/item/add
 VUE_APP_API_REMOVE_ITEM_FROM_CART_URL= /shoppingCart/item/remove
 VUE_APP_API_CLEAR_CART_URL= /shoppingCart/cart/items/remove/all
 VUE_APP_API_PLACE_ORDER_URL= /order/add
+
+VUE_APP_API_GET_USER_ORDER_URL= /order/user
+VUE_APP_API_CANCEL_ORDER_URL= /order/remove
