bug fix;add cp chart

--- a/.env
+++ b/.env
@@ -1,12 +1,17 @@
-VUE_APP_API_ROOT_URL=http://twkhjl.duckdns.org:3001
+VUE_APP_API_ROOT_URL=http://localhost:3001
 
 VUE_APP_API_LOGIN_CP_USER_URL= /login/cp
-VUE_APP_API_VERIFY_FRONT_USER_TOKEN_URL= /jwt/front
 VUE_APP_API_VERIFY_CP_USER_TOKEN_URL= /jwt/cp
+VUE_APP_API_CREATE_NEW_FRONT_USER_URL=/users/front
+VUE_APP_API_VERIFY_FRONT_USER_TOKEN_URL= /jwt/front
 VUE_APP_API_LOGIN_FRONT_USER_URL= /login/front
+
 VUE_APP_API_CAT_DATA_URL= /cats
+
 VUE_APP_API_PRODUCTS_URL= /products
 VUE_APP_API_GET_SINGLE_PRODUCT_URL= /product/
+VUE_APP_API_UPLOAD_PRODUCT_IMGS_URL=/products/imgs/upload
+
 VUE_APP_API_SHOW_SINGLE_SHOPPING_CART_URL= /shoppingCart/show/
 VUE_APP_API_UPDATE_CART_ITEMS_URL= /shoppingCart/items/update
 VUE_APP_API_ADD_ITEM_TO_CART_URL= /shoppingCart/item/add
@@ -16,3 +21,5 @@ VUE_APP_API_PLACE_ORDER_URL= /order/add
 
 VUE_APP_API_GET_USER_ORDER_URL= /order/user
 VUE_APP_API_CANCEL_ORDER_URL= /order/remove
+
+VUE_APP_API_CP_GET_ALL_ORDERS_URL = /cp/orders/all
