add order statistics

--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-VUE_APP_API_ROOT_URL=http://localhost:3001
-
+VUE_APP_API_ROOT_URL=http://localhost
 VUE_APP_API_LOGIN_CP_USER_URL= /login/cp
 VUE_APP_API_VERIFY_CP_USER_TOKEN_URL= /jwt/cp
 VUE_APP_API_CREATE_NEW_FRONT_USER_URL=/users/front
@@ -23,3 +22,5 @@ VUE_APP_API_GET_USER_ORDER_URL= /order/user
 VUE_APP_API_CANCEL_ORDER_URL= /order/remove
 
 VUE_APP_API_CP_GET_ALL_ORDERS_URL = /cp/orders/all
+
+VUE_APP_API_STATISTICS_ORDERS_ALL_URL = /statistics/orders/all
